# RingAttractor

./: .gitignore  README.md  plotting_script.ipynb  simulation_script.ipynb
python_ring/: ideation.ipynb  ring_attractor.py  simulation_results.txt
ring_attractor/: CMakeLists.txt  plotting.ipynb
ring_attractor/src/: CMakeLists.txt  dyna.cpp  dyna.hpp  para_sweep.cpp
